--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -93,7 +93,7 @@
     <ImageButton
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:id="@+id/imageButton2"
+        android:id="@+id/menu"
         android:layout_gravity="left|top"
         android:background="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
         android:backgroundTint="#c38f8f8f"
