--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -100,4 +100,28 @@
         android:layout_marginLeft="7dp"
         android:layout_marginTop="7dp" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/menuOpen"
+        android:layout_gravity="top|left|bottom|center_horizontal|right"
+        android:background="#a2000000"
+        android:visibility="invisible"
+        style="@style/AppTheme"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/menuPoint1"
+            android:layout_gravity="left|top"
+            android:background="#ffffff"
+            android:text="Radius"
+            android:visibility="invisible"
+            android:textColor="#000000"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"/>
+
+    </FrameLayout>
+
 </FrameLayout>
