--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -16,8 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/searchView"
-        android:layout_gravity="right|top"
-        android:backgroundTint="#c38f8f8f" />
+        android:layout_gravity="right|top"/>
 
 
     <ImageButton
@@ -26,9 +25,8 @@
         android:id="@+id/menu"
         android:layout_gravity="left|top"
         android:background="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
-        android:backgroundTint="#c38f8f8f"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="7dp" />
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="8dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -40,17 +38,62 @@
         style="@style/AppTheme"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
+        <ImageButton
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:id="@+id/menuExit"
+            android:layout_gravity="left|top"
+            android:background="@drawable/places_ic_clear"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="8dp" />
+
         <Button
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:id="@+id/menuPoint1"
             android:layout_gravity="left|top"
-            android:background="#ffffff"
+            android:background="#c8747474"
             android:text="Radius"
             android:visibility="invisible"
             android:textColor="#000000"
             android:layout_marginTop="50dp"
             android:layout_marginLeft="10dp"/>
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/menuPoint2"
+            android:layout_gravity="left|top"
+            android:background="#c8747474"
+            android:text="Radius"
+            android:visibility="invisible"
+            android:textColor="#000000"
+            android:layout_marginTop="110dp"
+            android:layout_marginLeft="10dp" />
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/menuPoint3"
+            android:layout_gravity="left|top"
+            android:background="#c8747474"
+            android:text="Radius"
+            android:visibility="invisible"
+            android:textColor="#000000"
+            android:layout_marginTop="170dp"
+            android:layout_marginLeft="10dp" />
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="50dp"
+            android:id="@+id/menuPoint4"
+            android:layout_gravity="left|top"
+            android:background="#c8747474"
+            android:text="Radius"
+            android:visibility="invisible"
+            android:textColor="#000000"
+            android:layout_marginTop="230dp"
+            android:layout_marginLeft="10dp" />
 
     </FrameLayout>
 
