--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -49,50 +49,50 @@
             android:layout_marginTop="8dp" />
 
         <Button
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="50dp"
             android:id="@+id/menuPoint1"
             android:layout_gravity="left|top"
-            android:background="#c8747474"
             android:text="Radius"
             android:visibility="invisible"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_marginTop="50dp"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:background="#4700ff95" />
 
         <Button
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="50dp"
             android:id="@+id/menuPoint2"
             android:layout_gravity="left|top"
-            android:background="#c8747474"
-            android:text="Radius"
+            android:background="#4700ff95"
+            android:text="Instagram"
             android:visibility="invisible"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_marginTop="110dp"
             android:layout_marginLeft="10dp" />
 
         <Button
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="50dp"
             android:id="@+id/menuPoint3"
             android:layout_gravity="left|top"
-            android:background="#c8747474"
+            android:background="#4700ff95"
             android:text="Radius"
             android:visibility="invisible"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_marginTop="170dp"
             android:layout_marginLeft="10dp" />
 
         <Button
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="50dp"
             android:id="@+id/menuPoint4"
             android:layout_gravity="left|top"
-            android:background="#c8747474"
-            android:text="Radius"
+            android:background="#4700ff95"
+            android:text="Impressum"
             android:visibility="invisible"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:layout_marginTop="230dp"
             android:layout_marginLeft="10dp" />
 
