--- a/app/src/main/res/layout-v21/start_activity.xml
+++ b/app/src/main/res/layout-v21/start_activity.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="158dp"
         android:layout_height="58dp"
-        android:text="Öffnen"
+        android:text="Lokalisieren"
         android:id="@+id/button"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="30dp"
@@ -66,7 +66,7 @@
     <Button
         android:layout_width="158dp"
         android:layout_height="58dp"
-        android:text="check"
+        android:text="Eingeben"
         android:id="@+id/checkButton"
         android:layout_gravity="top|center_horizontal"
         android:layout_marginTop="190dp"
