correct implementation of the permission check

--- a/app/src/main/res/layout-v21/activity_maps.xml
+++ b/app/src/main/res/layout-v21/activity_maps.xml
@@ -78,7 +78,7 @@
             android:id="@+id/menuPoint3"
             android:layout_gravity="left|top"
             android:background="#4700ff95"
-            android:text="Radius"
+            android:text="Impressum"
             android:visibility="invisible"
             android:textColor="#ffffff"
             android:layout_marginTop="170dp"
@@ -90,7 +90,7 @@
             android:id="@+id/menuPoint4"
             android:layout_gravity="left|top"
             android:background="#4700ff95"
-            android:text="Impressum"
+            android:text="Beenden"
             android:visibility="invisible"
             android:textColor="#ffffff"
             android:layout_marginTop="230dp"
