--- a/app/src/main/res/layout-v21/location_activity.xml
+++ b/app/src/main/res/layout-v21/location_activity.xml
@@ -28,7 +28,7 @@
         android:allowUndo="true"
         android:textColor="#ffffff"
         android:layout_marginLeft="50dp"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         android:layout_marginBottom="50dp"
         android:layout_marginRight="50dp" />
 
