delete textviews in location_activity. only possible in api 23

--- a/app/src/main/res/layout-v21/location_activity.xml
+++ b/app/src/main/res/layout-v21/location_activity.xml
@@ -8,51 +8,15 @@
     style="@style/AppTheme"
     tools:context="com.example.paul.hashtagworldmap.LocationActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="deine location:"
-        android:id="@+id/geoText"
-        android:layout_gravity="center_horizontal"
-        android:allowUndo="true"
-        android:textColor="#ffffff"
-        android:layout_marginTop="50dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="272dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/latInfo"
-        android:allowUndo="true"
-        android:textColor="#ffffff"
-        android:layout_marginLeft="50dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="50dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/lonInfo"
-        android:allowUndo="true"
-        android:textColor="#ffffff"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginRight="50dp" />
-
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_gravity="center_horizontal|bottom"
         android:indeterminate="false"
         android:max="100"
-        android:progress="100"
-        android:progressTint="#ffffff" />
+        android:progressTint="#ffffff"
+        android:progress="0"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
